--- a/game/src/main/resources/templates/home.html
+++ b/game/src/main/resources/templates/home.html
@@ -3,13 +3,26 @@
     <head>
         <meta charset = "utf-8">
         <title> Home </title>
+        <link rel="stylesheet" type="text/css" href="./styles.css" media="screen" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    </head>
     </head>
        
     </head>
 
-    <body>
-        <h1>Hello, world!</h1>
+    <body class = "home">
+        <div>
+            <div class="bingopng" >
+                <div>
+                    <img src = bingo.png>
+                </div>
+            </div>
+
+            <div class = "botoes">
+                <a class="nav-link" href="/newGame" ><button type="button" class="btn btn-success">New Game</button></a>
+                <a class="nav-link" href="/players" ><button type="button" class="btn btn-success">Players</button></a>
+            </div>
+        </div>
     </body>
 
 </html>
